--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 # Site
 title:              McPride's thougths
-bio:                'Marco Stolze - Living in Berlin, Germany.'
+author:             Marco Stolze
+bio:                'Living in Berlin, Germany.'
 description:        "My personal pages."
 reading_time:       true
 words_per_minute:   200
