--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,7 +2,5 @@
 
 - title: Projects
   url: /projects/
-# - title: subpage
-#  url: /pages/subpage/
 - title: Jekyll
-  url: pages/jekyll/
+  url: /pages/jekyll/
