--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
 title:              McPride's thougths
 author:             Marco Stolze
-bio:                'Living in Berlin, Germany.'
+bio:                'Software architect in Berlin, Germany.'
 description:        "My personal pages."
 reading_time:       true
 words_per_minute:   200
