style modified (because of multilanguage)

--- a/_data/postsnavigation.yml
+++ b/_data/postsnavigation.yml
@@ -1,6 +1,6 @@
 # Site navigation links
 
-- title: Alle Posts in deutsch
+- title: Alle Nachrichten auf deutsch
   url: /posts/de/
 - title: All posts in english
   url: /posts/en/
