--- a/_data/tagsnavigation.yml
+++ b/_data/tagsnavigation.yml
@@ -1,4 +1,4 @@
-- title: Tags aller Nachrichten auf Deutsch
+- title: Tags aller Artikel auf Deutsch
   url: /tags/de/
-- title: Tags of all posts in english
+- title: Tags of all posts in English
   url: /tags/en/
