--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ words_per_minute:   200
 logo:               'assets/img/logo.png'
 background:         'assets/img/placeholder-big.jpg'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
-locale:             en_US
+locale:             en
 url:                https://mcpride.github.io
 
 # Jekyll
@@ -64,7 +64,7 @@ github-url:         mcpride
 #hackernews:        username
 
 # Gems
-gems:
+plugins:
   - jekyll-mentions
   - jekyll-feed
   - jekyll-sitemap
