--- a/_data/messages.yml
+++ b/_data/messages.yml
@@ -32,7 +32,7 @@ locales:
     posts: "Artikel"
     pages: "Seiten"
     projects: "Projekte"
-    home: "Hauptseite"
+    home: "Startseite"
     languages: "Sprachen"
     lang_name: Deutsch
     post_title: Diesen Artikel auf Deutsch lesen...
