--- a/_data/messages.yml
+++ b/_data/messages.yml
@@ -12,9 +12,10 @@ locales:
     tags: "Tags"
     home: "Home"
     languages: "Languages"
-    lang_name: English
-    post_title: Read this post in English...
-    post_current_title: Current language selection of this post -> English
+    lang_name: "English"
+    post_title: "Read this post in English..."
+    post_current_title: "Current language selection of this post -> English"
+    back: "Back"
 
   en_US:
     <<: *DEFAULT_EN     # use English translation for en_US
@@ -34,8 +35,9 @@ locales:
     projects: "Projekte"
     home: "Startseite"
     languages: "Sprachen"
-    lang_name: Deutsch
-    post_title: Diesen Artikel auf Deutsch lesen...
-    post_current_title: Aktuelle Sprachauswahl dieses Artikels -> Deutsch
+    lang_name: "Deutsch"
+    post_title: "Diesen Artikel auf Deutsch lesen..."
+    post_current_title: "Aktuelle Sprachauswahl dieses Artikels -> Deutsch"
+    back: "Zur&uuml;ck"
   de_DE:
     <<: *DEFAULT_DE     # use German translation for de_DE
