--- a/_config.yml
+++ b/_config.yml
@@ -69,6 +69,7 @@ plugins:
   - jekyll-feed
   - jekyll-sitemap
   - jekyll-gist
+  - jekyll-admin
 
 jekyll-mentions:
     base_url: https://github.com
