--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ logo:               'assets/img/logo.png'
 background:         'assets/img/placeholder-big.jpg'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             en
+locales:            [de, en]
 url:                https://mcpride.github.io
 
 # Jekyll
