--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ locales:            [de, en]
 url:                https://mcpride.github.io
 
 # Jekyll
-permalink:          /:title/
+permalink:          /:categories/:year/:month/:day/:title/
 markdown:           kramdown
 highlighter:        rouge
 kramdown:
