--- a/_data/messages.yml
+++ b/_data/messages.yml
@@ -6,7 +6,7 @@ locales:
     site_description: "My personal pages."
     open_menu: "Open Menu"
     btn_more: "More..."
-    posts: "Posts"
+    posts: "Blog"
     pages: "Pages"
     projects: "Projects"
     tags: "Tags"
@@ -32,7 +32,7 @@ locales:
     site_description: "Meine pers&ouml;nlichen Seiten."
     open_menu: "Men&uuml; &ouml;ffnen"
     btn_more: "Mehr..."
-    posts: "Artikel"
+    posts: "Blog"
     pages: "Seiten"
     projects: "Projekte"
     home: "Startseite"
