--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,7 @@ linkedin_url: https://www.linkedin.com/in/mstolze/
 # pinterest_url:
 # slack_url:
 twitter_url: https://twitter.com/tweetpride
+xing_url: https://www.xing.com/profile/Marco_Stolze3
 
 # Comments
 disqus_shortname:   mcpride
