page title view changed

--- a/_data/messages.yml
+++ b/_data/messages.yml
@@ -9,6 +9,8 @@ locales:
     posts: "Blog"
     pages: "Pages"
     projects: "Projects"
+    tagged_as: "Tagged as"
+    tag: "tag"
     tags: "Tags"
     home: "Home"
     languages: "Languages"
@@ -35,6 +37,7 @@ locales:
     posts: "Blog"
     pages: "Seiten"
     projects: "Projekte"
+    tagged_as: "Getagged als"
     home: "Startseite"
     languages: "Sprachen"
     lang_name: "Deutsch"
