--- a/_config.yml
+++ b/_config.yml
@@ -41,6 +41,8 @@ permalink:          /:categories/:year/:month/:day/:title/
 markdown:           kramdown
 highlighter:        rouge
 kramdown:
+  input: GFM
+  syntax_highlighter: rouge
   auto_ids:         true
   footnote_nr:      1
   entity_output:    as_char
