seo-tag-plugin included

--- a/_config.yml
+++ b/_config.yml
@@ -60,6 +60,7 @@ plugins:
   - jekyll-sitemap
   - jekyll-gist
   - jekyll-admin
+  - jekyll-seo-tag
 
 # Exclude list
 exclude: [README.md, Gemfile, Gemfile.lock, node_modules, gulpfile.js, package.json, _site, src, vendor, CNAME, LICENSE, Rakefile, _draft, _gentags.rb]
