--- a/_data/messages.yml
+++ b/_data/messages.yml
@@ -10,6 +10,8 @@ locales:
     pages: "Pages"
     projects: "Projects"
     tagged_as: "Tagged as"
+    tagged_as_description_1: 'List of all posts, which were decorated with the tag "'
+    tagged_as_description_2: '".'
     tag: "tag"
     tags: "Tags"
     home: "Home"
@@ -42,6 +44,8 @@ locales:
     pages: "Seiten"
     projects: "Projekte"
     tagged_as: "Getagged als"
+    tagged_as_description_1: 'Liste aller Artikel, welche mit der Markierung "'
+    tagged_as_description_2: '" versehen wurden.'
     home: "Startseite"
     languages: "Sprachen"
     lang_name: "Deutsch"
