--- a/_data/messages.yml
+++ b/_data/messages.yml
@@ -26,6 +26,7 @@ locales:
     minute: "minute"
     minutes: "minutes"
     menu: "Menu"
+    get_in_touch: "Get in touch"
 
   en_US:
     <<: *DEFAULT_EN     # use English translation for en_US
@@ -58,5 +59,6 @@ locales:
     minute: "Minute"
     minutes: "Minuten"
     menu: "Menü"
+    get_in_touch: "Kontakt aufnehmen"
   de_DE:
     <<: *DEFAULT_DE     # use German translation for de_DE
