--- a/_config.yml
+++ b/_config.yml
@@ -64,3 +64,4 @@ plugins:
 
 # Exclude list
 exclude: [README.md, Gemfile, Gemfile.lock, node_modules, gulpfile.js, package.json, _site, src, vendor, CNAME, LICENSE, Rakefile, _draft, _gentags.rb]
+include: [BingSiteAuth.xml]
