website compression update

--- a/_config.yml
+++ b/_config.yml
@@ -53,6 +53,16 @@ sass:
   sass_dir:         _sass
   style:            compressed
 
+compress_html:
+  clippings: []
+  comments: []
+  endings: []
+  ignore:
+    envs: []
+  blanklines: false
+  profile: false
+  startings: []
+
 # Gems
 plugins:
   - jekyll-mentions
